# nano-empire-tollbooth

./: .gitattributes  .gitignore  LICENSE  PROOF.md  README.md  RELEASE.md  SECURITY.md  pyproject.toml  release.ps1
.agents/skills/nano-empire-tollbooth/: SKILL.md
.agents/skills/nano-empire-tollbooth/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: nano-empire-tollbooth-instincts.yaml
.codex/: AGENTS.md
.github/workflows/: ci.yml  gitleaks.yml  publish.yml
dogfood/: README.md  buyer_agent.py  paid_endpoint.py
examples/: basic_usage.py
nano_empire_tollbooth/: __init__.py  cli.py  license.py  pro.py  rails.py  settlement.py  tollbooth.py  x402_wire.py
tests/: test_license.py  test_pro_cli.py  test_rails.py  test_settlement.py  test_tollbooth.py  test_x402_wire.py
tollbooth-mcp/: Dockerfile  README.md  REGISTRY-SUBMISSION.md  pyproject.toml  smithery.yaml
tollbooth-mcp/scripts/: local-validate-smithery-yaml.py
tollbooth-mcp/tests/: test_core.py
tollbooth-mcp/tollbooth_mcp/: __init__.py  core.py  server.py
