[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-empire-tollbooth"
version = "0.3.0"
description = "Monetize any Python function with one decorator. Unlimited paper-mode metering, a one-time upgrade prompt around call 100, local ledger, signed receipts; Pro adds CSV/JSON export, higher caps, and CLI tools."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Nano Empire", email = "ops@nano-empire.dev" },
]
keywords = ["monetize", "python", "decorator", "billing", "micropayment", "agent", "x402", "api", "pay-per-call", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "pydantic>=2.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
tollbooth = "nano_empire_tollbooth.cli:main"

[project.urls]
Homepage = "https://neuralempireai.com"
Documentation = "https://neuralempireai.com/docs/quickstart.html"
Repository = "https://github.com/roblambert9/nano-empire-tollbooth"
"Issue Tracker" = "https://github.com/roblambert9/nano-empire-tollbooth/issues"
"Live Demo" = "https://neuralempireai.com/simulator/"


[tool.setuptools.packages.find]
where = ["."]
include = ["nano_empire_tollbooth*"]

[tool.setuptools.package-data]
nano_empire_tollbooth = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
